
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 20b
  * in model/thermo/_generic/thermo.c and model/thermo/_generic/thermo.hh
    - renamed H2V9 to H2v
  * in model/thermo/_generic/enthalpy.c
    - renamed H2V9 to H2v
    - changed the enthalpy of H2v to the one of H2V1
  * in model/transport/_Dixon-Lewis/transport.c
    - renamed H2V9 to H2v
  * in model/chem/_NH3_Plasma_32s/chem.hh
    - removed specH2V1 and reduced number of species by 1
  * in model/chem/_NH3_Plasma_32s/truscott2015.c
    - renamed species H2V1 by H2v
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - made several changes related to the BACAL HMINUS model
    - fixed a bug related to the Arakoni HMINUS model
    

2024 JUN 20a
  * in model/fluid/_*_plasma/fluid.c
    - got rid of TrefElectronEnergyTransport
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Qe() and find_dSe_dU_transport_Parent2024(), fixed a bug related to the PARENT2024
      TEMODEL which affects the solution when Te<300 K.
  

2024 JUN 19a
  * in model/fluid/_*_plasma/fluid_plasma.c
    - in _Te_local(), now finds Te from _Te_from_rhok_EoverN()
  * in model/thermo/_generic/thermo.c
    - removed find_Te_from_EoverN() and find_EoverN_from_Te() and find_dTe_dEoverN_from_EoverN()


2024 JUN 18b
  * in model/chem/_Air_Plasma_11s/doc/report.tex, model/chem/_Air_Plasma_8s/doc/report.tex,
    model/chem/_N2_Plasma_4s/doc/report.tex
    - altered the spline control points of the N2+ + e- > N + N reaction part of the rodriguez2024
      model
  * in model/chem/_Air_Plasma_11s/rodriguez2024.c, model/chem/_Air_Plasma_11s/rodriguezpark2024.c,
    model/chem/_Air_Plasma_8s/rodriguez2024.c, model/chem/_N2_Plasma_4s/rodriguez2024.c